--- a/samples/standalone/stdout.yml
+++ b/samples/standalone/stdout.yml
@@ -15,6 +15,10 @@ items:
       #   server: http://localhost:4222
       #   subject: eventhorizon
     validation: true
+    metrics:
+      enabled: true
+      path: /metrics
+      port: 1258
 
 - apiVersion: eventhorizon.acesso.io/v1alpha1
   kind: CloudEventOutput
