--- a/samples/fluentd.conf
+++ b/samples/fluentd.conf
@@ -4,9 +4,11 @@
   bind 0.0.0.0
 </source>
 
+<source>
+  @type unix
+  path /tmp/fluentd.sock
+</source>
+
 <match *.**>
-  @type copy
-  <store>
-    @type stdout
-  </store>
+  @type stdout
 </match>
