--- a/samples/kubernetes/CloudEventOutput.yml
+++ b/samples/kubernetes/CloudEventOutput.yml
@@ -1,14 +1,13 @@
 apiVersion: eventhorizon.acesso.io/v1alpha1
 kind: CloudEventOutput
 metadata:
-  name: fluentd-stage
+  name: fluentd
 spec:
   type: fluentd
   fluentd:
     key: eventhorizon
-    host: fluentd.services-test.svc.cluster.local
-    port: 24224
-    network: tcp
+    socketPath: /opt/acesso/run/fluentd.sock
+    network: unix
     timeout: 0s
     writeTimeout: 3s
     bufferLimit: 8192
