--- a/samples/standalone/fluentd-tcp.yml
+++ b/samples/standalone/fluentd-tcp.yml
@@ -48,6 +48,9 @@ items:
   spec:
     subjects:
     - eventhorizon
+    labels:
+      field1: value1
+      field2: value2
     encoder: map
     output: fluentd
 
