set default fluentd output options

--- a/samples/standalone/fluentd-sock.yml
+++ b/samples/standalone/fluentd-sock.yml
@@ -30,11 +30,12 @@ items:
     fluentd:
       socketPath: "/tmp/fluentd.sock"
       network: unix
-      timeout: 0s
-      writeTimeout: 3s
+      timeout: 3s
+      writeTimeout: 0s
       bufferLimit: 8192
       retryWait: 500
       maxRetryWait: 60000
+      maxRetry: 13
       async: false
       subSecondPrecision: false
       tagPrefix: ""
