--- a/samples/kubernetes/CloudEventOutput.yml
+++ b/samples/kubernetes/CloudEventOutput.yml
@@ -7,11 +7,12 @@ spec:
   fluentd:
     socketPath: /opt/acesso/run/fluentd.sock
     network: unix
-    timeout: 0s
-    writeTimeout: 3s
+    timeout: 3s
+    writeTimeout: 0s
     bufferLimit: 8192
     retryWait: 500
     maxRetryWait: 60000
+    maxRetry: 13
     async: false
     subSecondPrecision: false
     tagPrefix: ""
