--- a/samples/standalone/stdout.yml
+++ b/samples/standalone/stdout.yml
@@ -8,12 +8,12 @@ spec:
     field2: value2
   queue:
     backlog: 8192
-    maxRetry: 25
+    maxRetry: 13
     retryWait: 500
-    maxRetryWait: 65000
-  # metrics:
-  #   port: 1258
-  #   path: /metrics
+    maxRetryWait: 60000
+  metrics:
+    port: 1258
+    path: /metrics
   transport:
     type: http
     http:
